# simple-chat

./: Cargo.toml  README.md
.github/workflows/: post-commit.yml
chat/src/: client.rs  server.rs
hooks/: pre-commit
src/: client.rs
