[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }